--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   firebase_messaging: ^15.2.9
   flutter_easyloading: ^3.0.5
   image_picker: ^1.1.2
+  webview_flutter: ^4.13.0
+  flutter_speed_dial: ^7.0.0
 
 
 
@@ -88,6 +90,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - assets/images/
+   - assets/images/crime_clusters_map.html
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
