--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ dependencies:
   image_picker: ^1.1.2
   webview_flutter: ^4.13.0
   flutter_speed_dial: ^7.0.0
+  pdf: ^3.11.3
+  printing: ^5.14.2
 
 
 
